WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157130
Fix mistake in custom elements runtime flag
https://bugs.webkit.org/show_bug.cgi?id=157130
Summary
Fix mistake in custom elements runtime flag
Manuel Rego Casasnovas
Reported
2016-04-28 04:56:34 PDT
Fix mistake in custom elements runtime flag
Attachments
Patch
(1.82 KB, patch)
2016-04-28 04:57 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Manuel Rego Casasnovas
Comment 1
2016-04-28 04:57:06 PDT
Created
attachment 277611
[details]
Patch
Chris Dumez
Comment 2
2016-04-28 08:43:37 PDT
Comment on
attachment 277611
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2016-04-28 10:02:46 PDT
Comment on
attachment 277611
[details]
Patch Clearing flags on attachment: 277611 Committed
r200193
: <
http://trac.webkit.org/changeset/200193
>
WebKit Commit Bot
Comment 4
2016-04-28 10:02:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug