Fix mistake in custom elements runtime flag https://bugs.webkit.org/show_bug.cgi?id=157130

Reviewed by Chris Dumez.

The methods for the custom elements runtime flag were using
the Shadow DOM flag instead.
These methods were introduced in r197921,
it seems it was just a copy&paste mistake.

* UIProcess/API/C/WKPreferences.cpp:
(WKPreferencesSetCustomElementsEnabled):
(WKPreferencesGetCustomElementsEnabled):


Canonical link: https://commits.webkit.org/175240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200193 268f45cc-cd09-0410-ab3c-d52691b4dbfc